added ruby version

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,17 @@
 haskell/output.txt
 
 input.txt
+
+ruby/output.txt
+
+java/.idea/workspace.xml
+
+java/.idea/compiler.xml
+
+java/.idea/copyright/profiles_settings.xml
+
+java/.idea/java.iml
+
+java/.idea/misc.xml
+
+java/.idea/modules.xml
